Handle Closed Features Properly
- If a feature is not closed, but has items that were closed, don't add any default amount of remaining work
- Make sure that order is taken into account properly (by using custom comprarer to deal with difference in ADO and Jira in terms of ranking)
- Handle Features with 0 remaining items properly in forecast (don't forecast, just default to today)

--- a/Lighthouse/Pages/Teams/Details.cshtml
+++ b/Lighthouse/Pages/Teams/Details.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using Lighthouse.Models
 @model Lighthouse.Pages.Teams.DetailsModel
 
 @{
@@ -44,7 +45,7 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (var feature in Model.Features.OrderBy(f => f.Order))
+                @foreach (var feature in Model.Features.OrderBy(f => f, new FeatureComparer()))
                 {
                     @if (feature.Forecast != null)
                     {
