--- a/Lighthouse/Pages/Projects/Details.cshtml
+++ b/Lighthouse/Pages/Projects/Details.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using Lighthouse.Models
 @model Lighthouse.Pages.Projects.DetailsModel
 
 @{
@@ -47,7 +48,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var feature in Model.Entity.Features.OrderBy(f => f.Order))
+            @foreach (var feature in Model.Entity.Features.OrderBy(f => f, new FeatureComparer()))
             {
                 @if (feature.Forecast != null)
                 {
