Remove integrity check from local js libs

--- a/Lighthouse/Pages/Projects/Details.cshtml
+++ b/Lighthouse/Pages/Projects/Details.cshtml
@@ -6,9 +6,9 @@
     ViewData["Title"] = "Details";
 }
 
-<script src="/lib/Chart/Chart.min.js" integrity="sha256-d9Np49KdviSc4EDxsOPieKUBCpTmrW16eLD+BB4Vaio="></script>
-<script src="/lib/Chart/chartjs-adapter-date-fns.min.js" integrity="sha256-Z371DmWQH8cU83vAk036QAegi+hs+B/Eps6Vm8iw6YI="></script>
-<script src="/lib/Chart/chartjs-plugin-annotation.min.js" integrity="sha512-vR1GpvTTRaF+Ed/GM5kp/1dI2hAJPhIYI9izuVRfiXxd6PoLuHHCwKHuQyzlvS+IgMMtmE6XakO+vxZp1ZDqAg=="></script>
+<script src="/lib/Chart/Chart.min.js"></script>
+<script src="/lib/Chart/chartjs-adapter-date-fns.min.js"></script>
+<script src="/lib/Chart/chartjs-plugin-annotation.min.js" ></script>
 
 <h1>@Model.Entity.Name</h1>
 
