--- a/Lighthouse/Pages/Teams/Details.cshtml
+++ b/Lighthouse/Pages/Teams/Details.cshtml
@@ -6,7 +6,7 @@
     ViewData["Title"] = "Details";
 }
 
-<script src="/lib/Chart/Chart.min.js" integrity="sha256-d9Np49KdviSc4EDxsOPieKUBCpTmrW16eLD+BB4Vaio="></script>
+<script src="/lib/Chart/Chart.min.js" ></script>
 
 
 <h1>@Model.Entity.Name - Team Overview</h1>
