--- a/Lighthouse/Pages/Shared/_Layout.cshtml
+++ b/Lighthouse/Pages/Shared/_Layout.cshtml
@@ -80,7 +80,7 @@
                     </a>
                 </div>
                 <div class="col-md-2 text-md-right">
-                    <span style="font-family: 'Quicksand', sans-serif; color: rgba(48, 87, 78, 1);">v.@Configuration["LighthouseVersion"]</span>
+                    <span style="font-family: 'Quicksand', sans-serif; color: rgba(48, 87, 78, 1);">@Configuration["LighthouseVersion"]</span>
                 </div>
             </div>
         </div>
