Add link to tag for released version

--- a/Lighthouse/Pages/Shared/_Layout.cshtml
+++ b/Lighthouse/Pages/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Projects/Index">Projects</a>
                         </li>
                     </ul>
-                    
+
                     <div class="d-flex gap-5">
                         <a href="https://www.google.com" target="_blank" title="Help" rel="noopener">
                             <i class="fa-solid fa-info fa-lg" style="color: rgba(48, 87, 78, 1)"></i>
@@ -80,7 +80,9 @@
                     </a>
                 </div>
                 <div class="col-md-2 text-md-right">
-                    <span style="font-family: 'Quicksand', sans-serif; color: rgba(48, 87, 78, 1);">@Configuration["LighthouseVersion"]</span>
+                    <a class="navbar-brand d-flex align-items-center" href="https://github.com/LetPeopleWork/Lighthouse/releases/tag/@Configuration["LighthouseVersion"]">
+                        <span style="font-family: 'Quicksand', sans-serif; color: rgba(48, 87, 78, 1);">@Configuration["LighthouseVersion"]</span>
+                    </a>
                 </div>
             </div>
         </div>
