--- a/Lighthouse/Pages/Index.cshtml
+++ b/Lighthouse/Pages/Index.cshtml
@@ -16,7 +16,7 @@
         <h2><a asp-page="./Projects/Details" asp-route-id="@project.Id">@project.Name</a></h2>
 
         <table class="table">
-            <caption>Forecast Overview by Project</caption>
+            <caption>Forecast for @project.Name</caption>
             <thead>
                 <tr>
                     <th>Remaining Work</th>
