--- a/Lighthouse/Pages/Projects/Create.cshtml
+++ b/Lighthouse/Pages/Projects/Create.cshtml
@@ -17,6 +17,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Project.Name" class="control-label">
+                    Project Name:
                     <input asp-for="Project.Name" class="form-control" />
                     <span asp-validation-for="Project.Name" class="text-danger"></span>
                 </label>
