--- a/Lighthouse.Frontend/src/App.css
+++ b/Lighthouse.Frontend/src/App.css
@@ -8,7 +8,13 @@ body, html {
 
 .header {
   background-color:white;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); /* Optional: Add shadow for depth */
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+
+.footer {
+  background-color:white;
+  box-shadow: 4px 0px 0px 2px rgba(0, 0, 0, 0.1);
 }
 
 .toolbar {
