Fix syncfusion css import

--- a/Lighthouse.Frontend/src/App.css
+++ b/Lighthouse.Frontend/src/App.css
@@ -1,4 +1,4 @@
-@import "../node_modules/@syncfusion/ej2/Material3.css";
+@import "@syncfusion/ej2/Material3.css";
 
 /* Reset default margins and paddings */
 body, html {
